<resources>
    <string name="app_name">ALS Care</string>
    <string name="app_title1">ALS Care - Family of PALS and CALS </string>
    <string name="app_title2">ALS Care - Membership </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Click to Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_about_you">AboutYou</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_more">More</string>
    <string name="title_activity_speech_swallow">Speech and Swallowing Exercise</string>
    <string name="speechexercise1">\n\n
        " Disclaimer : Information shared here is contributed by caregivers of ALS patient \n\n "
        " We intend to help you based on experience of caregivers \n\n"

        "ALS patients face speech and swallowing problems. Some have bulbar onset while others show limb onset \n"
        "Early symptoms show slurring of speech, hoarse voice, worsening of speech intelligibility and fatigue \n"

        "Let us understand what causes speech difficulties in ALS patients \n"
        "The tongue, lips, jaw, soft palate and larynx along with their muscles, together help us to speak. \n"
        "When these set of oral muscles are affected (weakened/ paralysed), the range of movement, speed of movement and accuracy with which these muscles move is lost. \n"
        "Thus the overall precision of producing accurate sounds is lost. Hence, the speech produced is considered to be out of the normative range and is unclear/muffled/non-intelligible. \n"
        "Respiration also gets affected in many cases. Change of breathing pattern often leads to a change in the voice quality, making the voice breathy in quality. \n"
        "Weakness of soft palate also influences the voice quality making it nasal in nature. \n"
        "All the above changes causes the patient to "sound" completely different, making the patient unrecognizable by voice print. \n\n"

        "Under the guidance of speech therapist, patient should practice oro-motor exercises to strengthen tongue muscles \n\n"
        "The oro-motor exercises include: \n"
        " -Lip retraction spreading exercises \n"
        " -Lip pursing, puffing exercises \n"
        " -Tongue protrusion, retraction, elevation, depression and lateralization exercises \n"
        " -Tongue rotation exercises \n"
        " -Blowing and sucking velar exercises  \n\n"

        "Link to videos : \n"

        "Lip Protrusion Exercise\n<a href="https://www.youtube.com/watch?v=P9olC684jnA">www.youtube.com/watch?v=P9olC684jnA</a>\n\n"
        "Lip Retraction Exercise\n<a href="https://www.youtube.com/watch?v=GVEF6istp0Q">www.youtube.com/watch?v=GVEF6istp0Q</a>\n\n"
        "Effort full Swallowing Exercise\n<a href="https://www.youtube.com/watch?v=LsFTjvn12f8">www.youtube.com/watch?v=LsFTjvn12f8</a>\n\n"
        "Tongue Lateralization for speech and swallow\n<a href="https://www.youtube.com/watch?v=702IrmrMOmw">www.youtube.com/watch?v=702IrmrMOmw</a>\n\n"
        "Tongue Exercises for speech and swallow\n<a href="https://www.youtube.com/watch?v=Y0KgBbT11Ew">www.youtube.com/watch?v=Y0KgBbT11Ew</a>\n\n"
        "<b>Assistive Communication Devices</b> \n\n"
        "There are many compact Speech generating devices based on touchpad and eyeball tracker \n"
        "Owing to high cost of commercial AAC devices, there is an affordable solution based on Tobii-4c and OptiKey \n"
        "To setup , please follow the instructions here <a href="https://www.youtube.com/watch?v=P9olC684jnA">www.youtube.com/watch?v=P9olC684jnA</a>\n"

        "<b>Voice Banking </b>\n"
        "About 30% of ALS patients have their speech affected. Voice Banking aims to store
    </string>
    <string name="pranayam">\n\n
        " Disclaimer : Information shared here is contributed by caregivers of ALS patient \n\n "
        " We intend to help you based on experience of caregivers \n\n"
        "<b>Exercise Regime for early stage ALS patient </b>\n"
        "In early stages, apart from proper diet, physical exercise, breathing exercise, meditation, positivity and will goes a long way \n"
        "If the person cannot do exercise on his own, then they should do exercise under guidance of trained medical practitoner or trained caregiver. In general. exercise regime should include - "
        " 1) Range of Motion exercises to sustain daily activities\n"
        " 2) Mild resistance exercises using theraband, theratubes, springs, pulleys can be used if the patient has normal strength. \n"
        " 3) Breathing exercises to strengthen respiratory muscles \n"
        " 4) Speech and swallowing exercises"

        "Exercise help in improving blood circulation that reduces spasticity, cramps. However, ALS patient face fatigue and need to conserve energy"
        "So patients should exercise for short periods several times a day rather than attempting to exercise all muscle groups in one session.\n"
        "Also exercise with caution and prevent falls. Recovery after falls is impossible as ALS is relentless \n"
        "<b>Meditation</b>\n"
        "Meditation is a great way to relax and rejuvenate. We have observed patients go in deep relaxation at any stage \n"
        "Morning Guided Meditation by Shweta Agarwal \n<a href="https://www.youtube.com/watch?v=j0k8h5NvN_E">www.youtube.com/watch?v=j0k8h5NvN_E</a>\n"

    </string>
    <string name="aboutmnd">\n\n
        " Disclaimer : Information shared here is contributed by caregivers of ALS patient \n\n "
        " We intend to help you based on experience of caregivers \n\n"
        "Amyotrophic Lateral Sclerosis(ALS) or Motor Neurone Disease(MND) are a group of degenerative neuromuscular conditions which share common symptoms.\n"
        "They attack the motor neurones - nerve cells which control the muscles that enable us to move around, speak, breathe and swallow normally. \n"
        "These neurones are situated in the spinal cord and lower brain and they transmit signals from the brain to the voluntary muscles throughout the body. \n"
        "When motor neurones die as a result of MND, the ability of the brain to control muscle movement is affected. \n"
        "When muscles fail to receive messages, they gradually weaken and waste away (atrophy). \n"
        "The pattern of weakness varies from person to person. Not all symptoms necessarily happen to everyone and it is unlikely they will all develop at the same time, or in any specific order. \n\n"
        "ALS is the most common form of motor neurone disease (MND). \n"
        "Nearly 90% of patients with MND have the mixed ALS form of the disease, so the terms MND and ALS are commonly used to mean the same thing. \n"
        "Within this large ALS group there is still a huge variation in the way the disease presents and progresses, regardless of where it first begins. \n\n"
        "ALS/MND is also known as Lou Gehrigís Disease and Maladie de Charcot, after Jean-Martin Charcot, the French neurologist who first described it in 1869.\n\n"
        "ALS/MND is a rare condition and is present in 3 to 5 people per 100,000 population. \n\n"
        "The cause of ALS/MND is not yet known. While many theories are being researched, at present neither a cure nor a definitive means of prevention is known. \n\n"

    </string>
    <string name="verification">
        "First time users, please provide mobile number for verification\n"
        "You will receive 6 digit SMS code \n"
        "Enter code received and click Verify "
    </string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify</string>
    <string name="enter_phone">Enter phone no</string>
</resources>